--- a/.gitignore
+++ b/.gitignore
@@ -31,8 +31,7 @@ coverage
 # Bower dependency directory (https://bower.io/)
 bower_components
 
-# node-waf configuration
-.lock-wscript
+https://github.com/kayacihan/fullstack-url-shortener-mongo-node-react.git
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
@@ -40,6 +39,9 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+
+# mongovolume directories
+mongovolume/dbmongo/*
 
 # TypeScript v1 declaration files
 typings/
@@ -77,6 +79,8 @@ typings/
 
 # Next.js build output
 .next
+
+.history
 
 # Nuxt.js build / generate output
 .nuxt
