--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "A url shortener Using React and Node with a/b testing",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "clear & jest",
     "prod": "node index.js"
   },
   "repository": {
@@ -20,8 +20,20 @@
   "homepage": "https://github.com/kayacihan/fullstack-url-shortener-mongo-node-react#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.12.4"
+    "mongoose": "^5.12.4",
+    "shortid": "^2.2.16"
+  },
+  "jest": {
+    "verbose": true,
+    "testURL": "http://localhost:9879/",
+    "testEnvironment": "node",
+    "setupTestFrameworkScriptFile": "<rootDir>/testconfig.js",
+    "restoreMocks": true,
+    "testPathIgnorePatterns": [
+      "dist/"
+    ]
   },
   "devDependencies": {
     "jest": "^26.6.3"
