--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
         ports:
             - "3005:3005"
         volumes:
-            - ./server/src:/usr/src/server/src
+            - ./server:/usr/src/server
             - ./server/dist:/usr/src/server/dist
         links:
             - mongo
