--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.4",
-    "shortid": "^2.2.16"
+    "shortid": "^2.2.16",
+    "valid-url": "^1.0.9"
   },
   "jest": {
     "verbose": true,
