--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: "3.1"
 services:
     client:
-        container_name: react_client-1
+        container_name: react_client-4
         build: ./client
         ports:
             - "3333:3000"
         volumes:
-            - ./client/src:/usr/src/client/src
-            - ./client/public:/usr/src/client/public
+            - ./client/src:/app/src
+            - ./client/public:/app/public
         links:
             - api
         networks:
