--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-ab": "^1.0.1",
     "mongoose": "^5.12.4",
     "shortid": "^2.2.16",
     "valid-url": "^1.0.9"
