--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,17 @@
 version: "3.1"
 services:
     client:
-        container_name: react_client-4
+        container_name: react_1
         build: ./client
         ports:
             - "3333:3000"
-        volumes:
-            - ./client/src:/app/src
-            - ./client/public:/app/public
         links:
             - api
         networks:
             - gotoappnetwork
+
     api:
-        container_name: node_api-1
+        container_name: node_1
         build: ./server
         ports:
             - "3005:3005"
