--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.1",
     "express-ab": "^1.0.1",
     "mongoose": "^5.12.4",
+    "node-bitlyapi": "^0.4.0",
     "shortid": "^2.2.16",
     "valid-url": "^1.0.9"
   },
