--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,13 +1,13 @@
-FROM node:12-alpine as build
+FROM node:12
 
-WORKDIR /app
-COPY package.json /app/package.json
-RUN npm install
-COPY . /app
-RUN npm run build
+WORKDIR /usr/app
 
-FROM nginx:1.16.0-alpine
-COPY --from=build /app/build /usr/share/nginx/html
+COPY package*.json ./
+
+RUN npm ci 
+
+COPY . .
 
 EXPOSE 3000
-CMD ["nginx", "-g", "daemon off;"]
+
+CMD ["npm", "start"]
